--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,10 +12,10 @@
                 <Image Source="/Images/Hat.png" Width="{Binding ActualWidth, ElementName=LeftBox1}" Height="{Binding ActualHeight, ElementName=LeftBox1}" Canvas.Left="{Binding (Canvas.Left), ElementName=LeftBox1}" Canvas.Top="{Binding (Canvas.Top), ElementName=LeftBox1}" Margin="{Binding Margin, ElementName=LeftBox1}"/>
             </Canvas>
             <Canvas Width="250" Height="{Binding ActualHeight, ElementName=KinectCameraImage}" Background="GhostWhite" Opacity="0.5" Canvas.Right="20" Margin="20,20,20,20"/>
-        <Canvas Name="HandCursor" Width="70" Height="70">
-            <Ellipse Width="{Binding ActualWidth, ElementName=HandCursor}" Height="{Binding ActualHeight, ElementName=HandCursor}" Fill="GhostWhite" Opacity="0.5" Stroke="Black" StrokeThickness="2"/>
-            <Image Source="/Images/Hand.png" Width="60" Height="60" Margin="5,5,5,5"/>
-        </Canvas>
+            <Canvas Name="HandCursor" Width="70" Height="70" Visibility="Collapsed">
+                <Ellipse Width="{Binding ActualWidth, ElementName=HandCursor}" Height="{Binding ActualHeight, ElementName=HandCursor}" Fill="GhostWhite" Opacity="0.5" Stroke="Black" StrokeThickness="2"/>
+                <Image Source="/Images/Hand.png" Width="60" Height="60" Margin="5,5,5,5"/>
+            </Canvas>
         </Canvas>
         <Grid Name="SkeletonCanvas" Width="{Binding ActualWidth, ElementName=KinectCameraImage}" Height="{Binding ActualHeight, ElementName=KinectCameraImage}"/>
     </Grid>
