--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="KinectFittingRoom.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:buttons="clr-namespace:KinectFittingRoom.Buttons"
         Title="MainWindow" Height="350" Width="525" WindowState="Maximized"
         DataContext="{Binding RelativeSource={RelativeSource Self}}" >
     <Grid>
@@ -8,11 +9,19 @@
         <Canvas Width="{Binding ActualWidth, ElementName=KinectCameraImage}" Height="{Binding ActualHeight, ElementName=KinectCameraImage}">
             <Canvas Name="LeftPanel" Width="250" Height="{Binding ActualHeight, ElementName=KinectCameraImage}" Background="GhostWhite" Opacity="0.5" Canvas.Left="20" Margin="20,20,20,20"/>
             <Canvas Width="{Binding ActualWidth, ElementName=LeftPanel}" Height="{Binding ActualHeight, ElementName=LeftPanel}" Canvas.Left="{Binding (Canvas.Left), ElementName=LeftPanel}" Canvas.Top="{Binding (Canvas.Top), ElementName=LeftPanel}">
+                <buttons:KinectButton x:Name="ButtonHat" Background="Transparent" Width="200" Height="200" Canvas.Left="{Binding (Canvas.Left), ElementName=LeftPanel}" Canvas.Top="20" Margin="25,10,25,10">
+                    <Canvas Width="{Binding ActualWidth, ElementName=ButtonHat}" Height="{Binding ActualHeight, ElementName=ButtonHat}">
+                        <Canvas Name="LeftBox1" Width="{Binding ActualWidth, ElementName=ButtonHat}" Height="{Binding ActualHeight, ElementName=ButtonHat}" Background="Black" Opacity="0.5"/>
+                        <Image Source="/Images/Hat.png" Width="{Binding ActualWidth, ElementName=LeftBox1}" Height="{Binding ActualHeight, ElementName=LeftBox1}"/>
+                    </Canvas>
+                </buttons:KinectButton>
+            </Canvas>
+            <!--<Canvas Width="{Binding ActualWidth, ElementName=LeftPanel}" Height="{Binding ActualHeight, ElementName=LeftPanel}" Canvas.Left="{Binding (Canvas.Left), ElementName=LeftPanel}" Canvas.Top="{Binding (Canvas.Top), ElementName=LeftPanel}">
                 <Canvas Name="LeftBox1" Width="200" Height="200" Background="Black" Opacity="0.5" Canvas.Left="{Binding (Canvas.Left), ElementName=LeftPanel}" Canvas.Top="20" Margin="25,10,25,10"/>
                 <Image Source="/Images/Hat.png" Width="{Binding ActualWidth, ElementName=LeftBox1}" Height="{Binding ActualHeight, ElementName=LeftBox1}" Canvas.Left="{Binding (Canvas.Left), ElementName=LeftBox1}" Canvas.Top="{Binding (Canvas.Top), ElementName=LeftBox1}" Margin="{Binding Margin, ElementName=LeftBox1}"/>
-            </Canvas>
+            </Canvas>-->
             <Canvas Width="250" Height="{Binding ActualHeight, ElementName=KinectCameraImage}" Background="GhostWhite" Opacity="0.5" Canvas.Right="20" Margin="20,20,20,20"/>
-            <Canvas Name="HandCursor" Width="70" Height="70" Visibility="Collapsed">
+            <Canvas Name="HandCursor" Width="70" Height="70" Visibility="Collapsed" Canvas.Top="-4">
                 <Ellipse Width="{Binding ActualWidth, ElementName=HandCursor}" Height="{Binding ActualHeight, ElementName=HandCursor}" Fill="GhostWhite" Opacity="0.5" Stroke="Black" StrokeThickness="2"/>
                 <Image Source="/Images/Hand.png" Width="60" Height="60" Margin="5,5,5,5"/>
             </Canvas>
