--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:buttons="clr-namespace:KinectFittingRoom.Buttons"
-        Title="MainWindow" Height="350" Width="525" WindowState="Maximized"
+        Title="Kinect Fitting Room" Height="760" Width="1360" WindowState="Maximized"
         DataContext="{Binding RelativeSource={RelativeSource Self}}" >
     <Grid Name="MainGrid">
         <Image Name="KinectCameraImage" />
@@ -23,9 +23,15 @@
             <Canvas Width="250" Height="{Binding ActualHeight, ElementName=KinectCameraImage}" Background="GhostWhite" Opacity="0.5" Canvas.Right="20" Margin="20,20,20,20"/>
         </Canvas>
         <Canvas Width="{Binding ActualWidth, ElementName=KinectCameraImage}" Height="{Binding ActualHeight, ElementName=KinectCameraImage}">
-            <Canvas Name="HandCursor" Width="70" Height="70" Visibility="Collapsed" Canvas.Top="-4">
+            <Canvas Name="HandCursor" Width="70" Height="70" Visibility="Collapsed">
                 <Ellipse Width="{Binding ActualWidth, ElementName=HandCursor}" Height="{Binding ActualHeight, ElementName=HandCursor}" Fill="GhostWhite" Opacity="0.5" Stroke="Black" StrokeThickness="2"/>
-                <Image Source="/Images/Hand.png" Width="60" Height="60" Margin="5,5,5,5"/>
+                <Image Source="/Images/Hand.png" Width="60" Height="60" Margin="5,5,5,5">
+                    <!--<Image.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform x:Name="CursorScale" ScaleX="-1" />
+                        </TransformGroup>
+                    </Image.RenderTransform>-->
+                </Image>
             </Canvas>
         </Canvas>
         <Grid Name="SkeletonCanvas" Width="{Binding ActualWidth, ElementName=KinectCameraImage}" Height="{Binding ActualHeight, ElementName=KinectCameraImage}"/>
