--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:buttons="clr-namespace:KinectFittingRoom.Buttons"
         Title="Kinect Fitting Room" Height="760" Width="1360" WindowState="Maximized"
-        DataContext="{Binding RelativeSource={RelativeSource Self}}" >
+        DataContext="{Binding RelativeSource={RelativeSource Self}}" Icon="Images/tshirt.ico" >
     <Grid Name="MainGrid">
         <Image Name="KinectCameraImage" />
         <Canvas Name="ButtonCanvas" Width="{Binding ActualWidth, ElementName=KinectCameraImage}" Height="{Binding ActualHeight, ElementName=KinectCameraImage}">
