--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,11 +8,6 @@
         <Grid.Background>
             <ImageBrush ImageSource="Images/curtains.png" Stretch="UniformToFill"/>
         </Grid.Background>
-        <Grid Name="NoKinnectGrid" Opacity="0.7" Background="Black" Visibility="Hidden">
-            <TextBlock FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White">
-                Proszę podłączyć Kinnect!
-            </TextBlock>
-        </Grid>
         <Image Name="KinectCameraImage" />
         <Canvas Name="ButtonCanvas" Width="{Binding ActualWidth, ElementName=KinectCameraImage}" Height="{Binding ActualHeight, ElementName=KinectCameraImage}">
             <Canvas Name="LeftPanel" Width="250" Height="{Binding ActualHeight, ElementName=KinectCameraImage}" Background="GhostWhite" Opacity="0.5" Canvas.Left="20" Margin="20,20,20,20"/>
@@ -44,5 +39,10 @@
         </Canvas>
         <Grid Name="SkeletonCanvas" Width="{Binding ActualWidth, ElementName=KinectCameraImage}" Height="{Binding ActualHeight, ElementName=KinectCameraImage}"/>
         <Label x:Name="TimerLabel" FontSize="30" x:FieldModifier="public" Width="100" Height="100" Margin="0,0,417,220"/>
+        <Grid Name="NoKinnectGrid" Opacity="0.7" Background="Black" Visibility="Hidden">
+            <TextBlock FontSize="20" HorizontalAlignment="Center" Opacity="0.7" VerticalAlignment="Center" Foreground="White">
+                Proszę podłączyć Kinnect!
+            </TextBlock>
+        </Grid>
     </Grid>
 </Window>
